# agent-will-smith

./: .dockerignore  .env.example  .gitignore  CODE_GUIDELINES.md  CODE_REVIEWS.md  DEPLOYMENT.md  Dockerfile  HANDOFF.md  Makefile  QUICK_START.txt  README.md  TEST.md  app.py  cloud-run-config.yaml  demo_mock_server.py  docker-compose.prod.yml  docker-compose.yml  env.example  nginx.conf  postman_collection.json  pyproject.toml  requirements.txt  run.py  run_local.sh  test-intent-advisor.js  test_api.py  test_api.sh
.github/workflows/: test.yml
agent/: __init__.py  product_recommendation_agent.py  schemas.py  scorers.py
agent/product_recommendation/: __init__.py  agent.py  constants.py  container.py  product_recommendation_agent.py  schemas.py  workflow.py
agent/product_recommendation/config/: __init__.py  settings.py
agent/product_recommendation/infra/: __init__.py  llm_client.py  prompts.py  vector_search.py
agent/product_recommendation/node/: __init__.py  compose_response_node.py  intent_analysis.py  intent_analysis_node.py  parallel_search.py  parallel_search_node.py  query_builder.py  response_composer.py  vector_search.py
agent/product_recommendation/schemas/: __init__.py  database.py  messages.py  state.py
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/api/dto/: __init__.py
app/api/product_recommendation/: routes.py
app/api/system/: routes.py
app/gateway/controller/: __init__.py  routes.py
app/gateway/dto/: schemas.py
app/gateway/product_recommendation/: __init__.py  routes.py
app/middleware/: auth.py  auth_middleware.py  observability.py  observability_middleware.py
core/: config.py  container.py  exceptions.py  logger.py
core/config/: __init__.py  common.py  fastapi.py  fastapi_config.py  mlflow_config.py
core/memory/: __init__.py  context_manager.py
core/prompts/: __init__.py  loader.py
core/tools/: __init__.py  vector_search.py
deploy/: cloud-init.yaml
docs/: INTENT_CHAT_SPEC.md
docs/plans/: 2026-01-22-intent-profile-panel-enhancement.md  2026-01-22-intent-profile-panel-implementation.md  2026-01-23-conversation-analytics-design.md  2026-01-23-conversation-analytics-implementation.md
frontend/: .env.local.example  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/assistant-ui/: financial-goal-card.tsx  intent-profile-panel.tsx  scenario-selector.tsx  session-stats.tsx  signal-history.tsx  thread.tsx  user-profile-card.tsx
frontend/hooks/: use-quick-questions.ts
frontend/lib/: chat-api.ts  intent-profile-context.tsx  runtime-provider.tsx  scenario-context.tsx  scenarios.ts  types.ts
prompts/: test.intent_chat_system.txt  test.prompt.txt
scripts/: test_prompt.py
services/: cache_service.py  content_service.py  gemini_service.py  search_service.py
src/: main.py
src/agent/: __init__.py
src/agent/product_recommendation/: agent.py  config.py  container.py  product_recommendation_agent.py
src/agent_will_smith/: main.py
src/agent_will_smith/agent/: __init__.py
src/agent_will_smith/app/: exception_handlers.py
src/agent_will_smith/conversation_analytics/: database.py  (+3 more)
src/core/: container.py  core_container.py  exceptions.py  logger.py
src/infra/: __init__.py  llm_client.py  prompt_client.py
tests/: conftest.py  test_api.py  test_content_id_logic.py  test_vext_api_format.py
tests/conversation_analytics/: test_database.py  test_integration.py  test_logger.py
tests/unit/: test_api_dto.py  test_namespaces.py  test_product_registry.py  test_repo_dto.py  test_state.py  test_validators.py
(+112 files in other folders)
