[project]
name = "agent-will-smith"
version = "0.1.0"
description = "Product recommendation agent using Databricks vector search and LangChain"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # FastAPI & ASGI
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    
    # LangChain & Databricks
    "langchain>=1.1.0",
    # "langgraph>=1.0.4",  # Commented out - will be needed for future migration
    "databricks-langchain>=0.11.0",
    "databricks-sdk>=0.73.0",
    "databricks-vectorsearch>=0.40",
    
    # MLFlow
    "mlflow>=3.6.0",
    
    # Schema & Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.0",
    
    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    
    # Observability
    "structlog>=24.0.0",
    "psutil>=6.0.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "app", "core"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

