[project]
name = "agent-will-smith"
version = "0.1.0"
description = "Product recommendation agent using Databricks vector search and LangChain"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # FastAPI & ASGI
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    
    # LangChain & Databricks
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "databricks-langchain>=0.12.1",
    "databricks-sdk>=0.76.0",
    
    # MLFlow
    "mlflow>=3.8.1",
    
    # Schema & Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    
    # Observability
    "structlog>=25.5.0",
    
    # Dependency Injection
    "dependency-injector>=4.48.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

