[project]
name = "agent-will-smith"
version = "0.1.0"
description = "Product recommendation agent using Databricks vector search and LangChain"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    # FastAPI & ASGI
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    
    # LangChain & Databricks
    "langchain>=1.2.0",
    "langgraph>=1.0.5",
    "databricks-langchain>=0.12.1",
    "databricks-sdk>=0.76.0",
    
    # MLFlow
    "mlflow>=3.8.1",
    
    # Schema & Validation
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    
    # Observability
    "structlog>=25.5.0",
    
    # Dependency Injection
    "dependency-injector>=4.48.3",

    # Versioning
    "semver>=3.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_will_smith"]


